--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
+I am going to push this update to github.
 <p>
   Fork me? Fork you, @octocat!
 </p>
